--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 .todo-container {
   width: 70%;
   height: 60%;
-  max-height: auto;
+  max-height: fit-content;
   background-color: white;
   border-radius: 20px;
 }
@@ -45,6 +45,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   background-color: black;
@@ -121,12 +123,18 @@
   border: none;
 }
 .list-align {
+  background-color: white;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  margin-top: 50px;
+  position: fixed;
+  width: 70%;
   display: flex;
   justify-content: center;
 }
 .list-content {
   width: 90%;
-  margin-top: 50px;
+  height: auto;
   display: flex;
   justify-content: space-between;
 }
@@ -139,11 +147,22 @@
 .list3 {
   text-align: center;
 }
+.list4 {
+  text-align: center;
+}
+.list5 {
+  text-align: center;
+}
+.list4 i {
+  margin-top: 10px;
+}
+.list5 i {
+  margin-top: 10px;
+}
 
 .list-content p {
-  border-radius: 10px;
-  padding: 10px;
-  background-color: aquamarine;
+  font-weight: bold;
+  border-bottom: 2px solid black;
 }
 
 li {
