--- a/style.css
+++ b/style.css
@@ -2,171 +2,133 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(200deg, rgb(192, 255, 211), springgreen);
-}
-.todo-container {
-  width: 70%;
-  height: 60%;
-  max-height: fit-content;
-  background-color: white;
-  border-radius: 20px;
-}
-.todo-container h2 {
-  margin-top: 30px;
-  margin-left: 30px;
-}
-.add-btn {
-  margin-top: 30px;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-.add-btn input {
-  font-size: 16px;
-  font-weight: 500;
-  background-color: springgreen;
-  margin-left: 10px;
-  padding: 20px 30px;
-  border-radius: 50px;
-  border: none;
-  cursor: pointer;
+  font-family: "poppins", sans-serif;
 }
 .overlay {
-  display: none;
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
   background-color: black;
   opacity: 0.8;
-  z-index: 1;
-}
-.todo-insert {
   width: 100%;
+  height: 100vh;
   display: none;
-  bottom: 200px;
-  padding: 50px;
-  background-color: white;
-  position: relative;
-  border-radius: 30px;
-  z-index: 2;
 }
-.todo-insert .add-task {
-  margin-top: 40px;
+.container {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(200deg, white, springgreen);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.todo-app {
+  background-color: white;
+  width: 60%;
+  border-radius: 20px;
+}
+.header {
+  width: 100%;
+  font-size: 12px;
+  margin: 10px auto auto 20px;
+}
+.btn {
+  margin-top: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.btn input {
+  padding: 20px;
+  border-radius: 30px;
+  border: none;
+  background-color: springgreen;
+  color: black;
+  outline: none;
+  font-weight: bold;
+  font-size: 18px;
+}
+.list-container {
+  display: flex;
+  justify-content: center;
+}
+.list-container .lists {
+  margin-top: 30px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+.headline {
+  width: 100%;
+  font-size: 18px;
+}
+.list-container .lists .list-icon {
+  text-align: center;
+}
+
+.list-container .lists .list li {
   width: 100%;
   font-size: 16px;
-  font-weight: 500;
-  background-color: springgreen;
-  padding: 20px 30px;
-  border-radius: 50px;
-  border: none;
-  cursor: pointer;
+  list-style: none;
+  text-align: center;
+  line-height: 40px;
 }
-.todo-insert .cancle {
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  float: right;
-  font-size: 25px;
-  cursor: pointer;
+.list-container .lists .list-icon i {
+  font-size: 16px;
+  list-style: none;
+  text-align: center;
+  line-height: 40px;
 }
-.input-box div label {
-  flex: 0.3;
-  color: black;
-  font-size: 18px;
-  font-weight: 500;
-  margin-right: 10px;
-}
-.input-box {
-  margin-top: 40px;
+.new-task-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
 }
-.input-box div {
+.task-input-container {
+  display: none;
+  position: relative;
+  margin-top: -620px;
+  background-color: white;
+  width: 60%;
+  padding: 30px;
+  border-radius: 20px;
+  z-index: 2;
+}
+.task-input-container .icon {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 25px;
+}
+.task-input-container .task-inputs {
+  margin-top: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 80%;
 }
-.input-box .field {
-  width: 100%;
-  background-color: whitesmoke;
-  padding: 20px;
-  border-radius: 50px;
-  border: none;
-  flex: 1;
+
+.task-input-container .task-inputs label {
+  flex: 0.2;
+  font-size: 16px;
 }
-.input-box .btn {
-  background-color: springgreen;
-  margin-left: 10px;
-  padding: 20px 30px;
-  border-radius: 50px;
-  border: none;
-  cursor: pointer;
-}
-.input-box .field:focus {
+.task-input-container .task-inputs input {
+  background-color: rgb(203, 255, 203);
+  color: black;
+  padding: 10px;
   outline: none;
   border: none;
-}
-.list-align {
-  background-color: white;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  margin-top: 50px;
-  position: fixed;
-  width: 70%;
-  display: flex;
-  justify-content: center;
-}
-.list-content {
-  width: 90%;
-  height: auto;
-  display: flex;
-  justify-content: space-between;
-}
-.list {
-  text-align: center;
-}
-.list2 {
-  text-align: center;
-}
-.list3 {
-  text-align: center;
-}
-.list4 {
-  text-align: center;
-}
-.list5 {
-  text-align: center;
-}
-.list4 i {
-  margin-top: 10px;
-}
-.list5 i {
-  margin-top: 10px;
+  border-radius: 20px;
+  flex: 1;
 }
 
-.list-content p {
-  font-weight: bold;
-  border-bottom: 2px solid black;
-}
-
-li {
-  list-style: none;
-  width: 100%;
-  line-height: 40px;
+.btn .add-task-btn {
+  margin-left: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  background-color: springgreen;
+  color: black;
+  outline: none;
+  font-weight: 500;
+  font-size: 15px;
 }
