--- a/style.css
+++ b/style.css
@@ -4,169 +4,128 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-
+.overlay{
+    display: none;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: black;
+    opacity: 0.8;
+}
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(200deg, rgb(192, 255, 211), springgreen);
-}
-.todo-container {
-  width: 70%;
-  height: 60%;
-  max-height: fit-content;
-  background-color: white;
-  border-radius: 20px;
-}
-.todo-container h2 {
-  margin-top: 30px;
-  margin-left: 30px;
-}
-.add-btn {
-  margin-top: 30px;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-.add-btn input {
-  font-size: 16px;
-  font-weight: 500;
-  background-color: springgreen;
-  margin-left: 10px;
-  padding: 20px 30px;
-  border-radius: 50px;
-  border: none;
-  cursor: pointer;
-}
-.overlay {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  opacity: 0.8;
-  z-index: 1;
-}
-.todo-insert {
-  width: 100%;
-  display: none;
-  bottom: 200px;
-  padding: 50px;
-  background-color: white;
-  position: relative;
-  border-radius: 30px;
-  z-index: 2;
-}
-.todo-insert .add-task {
-  margin-top: 40px;
-  width: 100%;
-  font-size: 16px;
-  font-weight: 500;
-  background-color: springgreen;
-  padding: 20px 30px;
-  border-radius: 50px;
-  border: none;
-  cursor: pointer;
-}
-.todo-insert .cancle {
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  float: right;
-  font-size: 25px;
-  cursor: pointer;
-}
-.input-box div label {
-  flex: 0.3;
-  color: black;
-  font-size: 18px;
-  font-weight: 500;
-  margin-right: 10px;
-}
-.input-box {
-  margin-top: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  background: linear-gradient(120deg,rgb(89, 0, 255),rgb(128, 74, 255),rgb(89, 0, 255));
 }
-.input-box div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 80%;
+.todo-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    border-radius: 20px;
+    background-color: white;
 }
-.input-box .field {
-  width: 100%;
-  background-color: whitesmoke;
-  padding: 20px;
-  border-radius: 50px;
-  border: none;
-  flex: 1;
+.todo-app button{
+    margin: 20px 0px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    background-color: blueviolet;
+    color: white;
+    font-size: 15px;
 }
-.input-box .btn {
-  background-color: springgreen;
-  margin-left: 10px;
-  padding: 20px 30px;
-  border-radius: 50px;
-  border: none;
-  cursor: pointer;
+.list-heading{
+    margin: 0px 0px 20px;
+    background-color: lavender;
+    padding: 10px;
+    border-radius: 10px;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
 }
-.input-box .field:focus {
-  outline: none;
-  border: none;
+.list-items{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-.list-align {
-  background-color: white;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  margin-top: 50px;
-  position: fixed;
-  width: 70%;
-  display: flex;
-  justify-content: center;
+.list-items .task{
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    width: 100%;
+    background-color: rgba(238, 218, 255, 0.582);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.list-content {
-  width: 90%;
-  height: auto;
-  display: flex;
-  justify-content: space-between;
+.list-items .task li{
+    list-style: none;
 }
-.list {
-  text-align: center;
+.list-items .task i{
+    position: relative;
+    right: 10px;
 }
-.list2 {
-  text-align: center;
+.list-items .task i:last-child{
+    position: relative;
+    right: 25px;
 }
-.list3 {
-  text-align: center;
+.add-task-app{
+    display: none;
 }
-.list4 {
-  text-align: center;
+.add-task-container{
+    position: relative;
+    width: 80%;
+    margin: -450px auto ;
+    border-radius: 50px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
 }
-.list5 {
-  text-align: center;
+.add-task-container i{
+    position: absolute;
+    right: 30px;
+    top: 20px;
+    font-size: 23px;
 }
-.list4 i {
-  margin-top: 10px;
+.add-task-container h2{
+    margin: 10px auto;
 }
-.list5 i {
-  margin-top: 10px;
+.add-task-container .task-input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    padding: 10px;   
 }
-
-.list-content p {
-  font-weight: bold;
-  border-bottom: 2px solid black;
+.add-task-container .task-input input{
+    flex: 1;
+    padding: 10px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    background-color: lavender;
 }
-
-li {
-  list-style: none;
-  width: 100%;
-  line-height: 40px;
+.add-task-container .task-input label{
+    flex: 0.2;
+}
+.add-task-container .add-task-btn{
+    margin: 20px 0px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    background-color: blueviolet;
+    color: white;
+    font-size: 15px;   
 }
