--- a/style.css
+++ b/style.css
@@ -1,113 +1,119 @@
-*{
-    margin: 0; padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins",sans-serif;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Poppins", sans-serif;
 }
 
-.container{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background:linear-gradient(to bottom,#ffc423,white);
+.container {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
-.todo-app{
-    width: 70%;
-    height: fit-content;
-    margin-top: 50px;
-    background-color: rgba(255,255,255,0.7);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+.todo-app {
+	width: 70%;
+	height: fit-content;
+	margin-top: 50px;
+	background-color: #00000028;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
 }
 
-.todo-app h1{
-    color: black;
-    text-align: center;
+.todo-app h1 {
+	color: rgb(99, 0, 99);
+	text-align: center;
 }
 .task {
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 10px;
 }
 
-.todo-app .task label{
-    color: black;
-    font-weight: 500;
+.todo-app .task label {
+	color: black;
+	font-weight: 500;
+	margin-left: 10px;
+	text-wrap: nowrap;
 }
-.todo-app .task input{
-    width: 60%;
-    border: none;
-    outline: none;
-    padding: 10px;
-    border-radius: 30px;
+.todo-app .task input {
+	width: 60%;
+	border: none;
+	outline: none;
+	padding: 10px;
+	border-radius: 30px;
 }
-.todo-app .task button{
-    width: 100px;
-    border: none;
-    outline: none;
-    padding: 10px;
-    border-radius: 30px;
-    background-color: #0fff50;
-    font-weight: 500;
+.todo-app .task button {
+	width: 100px;
+	border: none;
+	outline: none;
+	padding: 10px;
+	border-radius: 30px;
+	background-color: #d400ff;
+	color: white;
+	font-weight: 500;
+	margin-right: 10px;
+	text-wrap: nowrap;
 }
-.task-list{
-    width: 100%;
+.task-list {
+	width: 100%;
 }
-.task-list span{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    background: rgba(255,255,255,0.2);
-    margin: 10px;
+.task-list span {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	background: rgba(140, 0, 255, 0.308);
+	margin: 10px;
+	border-radius: 20px;
 }
-.task-list li{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+.task-list li {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
 }
-.task-list p{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    color:black;
-    font-size: 17px;
-    font-weight: 500;
-    margin: 10px;
+.task-list p {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	color: black;
+	font-size: 17px;
+	font-weight: 500;
+	margin: 10px;
 }
-.task-list input{
-    border: none;
-    outline: none;
-    border-radius: 30px;
-    padding: 10px;
+.task-list input {
+	border: none;
+	outline: none;
+	border-radius: 30px;
+	padding: 10px;
 }
-.task-list .edit{
-    font-size: 18px;
-    color: black;
+.task-list .edit {
+	font-size: 18px;
+	color: black;
 }
 
-.task-list .remove{
-    font-size: 23px;
-    font-weight: bold;
-    color: red;
+.task-list .remove {
+	font-size: 23px;
+	font-weight: bold;
+	color: red;
 }
-@media screen and (max-width:450px){
-    .todo-app{
-        width: 90%;
-        height: fit-content;
-        margin-top: 50px;
-    }
-    .task-list p{
-        padding: 10px;
-    }
-    .task-list input{
-        width: 40%;
-        padding: 10px;
-    }
+@media screen and (max-width: 450px) {
+	.todo-app {
+		width: 90%;
+		height: fit-content;
+		margin-top: 50px;
+	}
+	.task-list p {
+		padding: 10px;
+	}
+	.task-list input {
+		width: 40%;
+		padding: 10px;
+	}
 }
